--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/sinon": "^1.16.35",
+    "@types/supertest": "^2.0.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
     "sinon": "^1.17.7",
+    "supertest": "^3.0.0",
     "ts-node": "^2.1.0",
     "typescript": "^2.2.1"
   },
