--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   },
   "dependencies": {
     "@types/express": "^4.0.35",
+    "@types/winston": "^2.2.0",
     "commander": "^2.9.0",
     "express": "^4.15.0",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "winston": "^2.3.1"
   }
 }
