--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "typescript": "^2.2.1"
   },
   "dependencies": {
+    "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
     "@types/winston": "^2.2.0",
     "commander": "^2.9.0",
+    "cors": "^2.8.1",
     "express": "^4.15.0",
     "http": "0.0.0",
     "winston": "^2.3.1"
