ADD morgan as logger middleware

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "cors": "^2.8.1",
     "express": "^4.15.0",
     "http": "0.0.0",
+    "morgan": "^1.8.1",
+    "rimraf": "^2.6.1",
+    "tsc": "^1.20150623.0",
     "winston": "^2.3.1"
   }
 }
