--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "http": "0.0.0",
     "morgan": "^1.8.1",
     "rimraf": "^2.6.1",
+    "serve-favicons": "^2.1.5",
     "tsc": "^1.20150623.0",
     "winston": "^2.3.1"
   }
