--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.16.0",
+    "@types/compression": "0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
     "@types/winston": "^2.2.0",
     "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.15.0",
     "http": "0.0.0",
