ADD simple swagger example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
-    "preserveConstEnums": true,
-    "removeComments": true
+    "preserveConstEnums": true
+    // "removeComments": true
   },
   "include": [
     "src/**/*"
