--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/compression": "0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.35",
+    "@types/swagger-jsdoc": "0.0.1",
     "@types/winston": "^2.2.0",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
@@ -55,6 +56,7 @@
     "morgan": "^1.8.1",
     "rimraf": "^2.6.1",
     "serve-favicons": "^2.1.5",
+    "swagger-jsdoc": "^1.9.2",
     "tsc": "^1.20150623.0",
     "winston": "^2.3.1"
   }
